--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,19 +1,10 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block contents %}
 
-{% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
-            <div class="alert alert-danger" role="alert"> {{ error }} </div>
-        {% endfor %}
-    {% endfor %}
-    {% for error in form.non_field_errors %}
-        <div class="alert alert-danger" role="alert"> {{ error }} </div>
-    {% endfor %}
-{% endif %}
+{% include 'form_error.html' %}
 
-<form method="post" id="user-login" action="{ url 'login:login' ">
+<form method="post" id="user-login" action="{% url 'action:login' %}">
     {% csrf_token %}
 
     <div class="form-group">
