--- a/signup/templates/signup/signup.html
+++ b/signup/templates/signup/signup.html
@@ -2,16 +2,7 @@
 
 {% block contents %}
 
-{% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
-            <div class="alert alert-danger" role="alert"> {{ error }} </div>
-        {% endfor %}
-    {% endfor %}
-    {% for error in form.non_field_errors %}
-        <div class="alert alert-danger" role="alert"> {{ error }} </div>
-    {% endfor %}
-{% endif %}
+{% include 'form_error.html' %}
 
 <form method="post" id="user-signup" action="">
     {% csrf_token %}
