--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,18 @@
     <meta charset="utf-8">
     <title>Bookmark Manager</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"></link>
+    <link href="{% static 'css/callout.css' %}" rel="stylesheet"></link>
   </head>
 
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
+  <style>
+    body {
+      padding-top: 80px;
+      background-color: #F3F2F2
+    }
+  </style>
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -25,7 +33,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username|capfirst}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
             </ul>
